assets/scss/custom.scss
a.navbar-brand {
  text-transform: uppercase;
}
.navbar-nav a.nav-link {
  text-transform: uppercase;
}
.page-footer {
  background-color: #2c3e50;
}
.dark .page-footer {
  background-color: #282a36;
}
.page-footer .site-footer {
  color: #fff;
}
.page-footer .site-footer a {
  color: #1abc9c;
}

// Callouts
div.alert.alert-warning {
  border-color: #cd0930;

  code {
    background-color: #fff5f7;
  }

  div:first-child::before {
    color: #e54867;
  }
}

div.alert.alert-note {
  border-color: #12537e;
}

div.alert {
  div:first-child::before {
    color: #55779a;
  }
}

// Testimonials
.testimonials.card-columns {
  column-count: 1;
  @media (min-width: 992px) { // desktop
    column-count: 3;
  }
}

